# traffic-optimizer

./: .gitignore  README.md  run_traffic_model.sh
trafficmodel/: CMakeLists.txt
trafficmodel/__tests__/: CMakeLists.txt  astartest.cpp  basictest.cpp  garagetest.cpp  helpers.cpp  helpers.h  intersectiontest.cpp  roadtest.cpp  vehicletest.cpp
trafficmodel/__tests__/testClasses/: simpleAcyclicGraph.cpp  simpleAcyclicGraph.h  simpleCyclicGraph.cpp  simpleCyclicGraph.h
trafficmodel/dependencies/: config.h
trafficmodel/dependencies/enums/: directions.h
trafficmodel/dependencies/glad/: glad.h
trafficmodel/dependencies/model/: intersection.h  road.h  vehicle.h
trafficmodel/dependencies/utils/: astar.h  math.h  node.h  pos.h
trafficmodel/lib/: CMakeLists.txt  glad.c
trafficmodel/lib/enums/: directions.h
trafficmodel/lib/model/: garage.cpp  garage.h  intersection.cpp  intersection.h  map.cpp  map.h  road.cpp  road.h  vehicle.cpp  vehicle.h  vehicleInfo.h
trafficmodel/lib/model/dataSchema/: intersectionData.h  mapStats.h  vehicleInfo.h
trafficmodel/lib/model/defaults/: defaultGarage.cpp
trafficmodel/lib/model/interfaces/: garagePatterns.h  strategy.h
trafficmodel/lib/utils/: astar.cpp  astar.h  mymath.cpp  mymath.h  node.cpp  node.h  pos.cpp
trafficmodel/lib/view/: viewer.cpp
trafficmodel/model/: CMakeLists.txt  config.h
trafficmodel/model/components/: garage.h  intersection.cpp  intersection.h  map.h  road.cpp  road.h  vehicle.cpp  vehicle.h
trafficmodel/model/components/defaults/: defaultGarage.h  defaultStrategy.cpp  defaultStrategy.h
trafficmodel/model/components/interfaces/: strategy.h
trafficmodel/model/utils/: astar.cpp  astar.h  mymath.cpp  mymath.h  node.cpp  node.h  pos.cpp
trafficmodel/modelGUI/: CMakeLists.txt  config.h  viewer.h
trafficmodel/modelGUI/components/: components.h  renderSet.h  uiSet.h
trafficmodel/modelGUI/constants/: appmode.h
trafficmodel/modelGUI/controller/: App.cpp  App.h
trafficmodel/modelGUI/factories/: meshFactory.cpp  meshFactory.h
trafficmodel/modelGUI/factories/shapes/: rectangleMesh.cpp  rectangleMesh.h
trafficmodel/modelGUI/shaders/: shaders.cpp  shaders.h
trafficmodel/modelGUI/shaders/GPU/: fragment.txt  vertex.txt
trafficmodel/modelGUI/system/: atlas.cpp  atlas.h  camera.cpp  camera.h  renderer.cpp  renderer.h
trafficmodel/modelGUI/traffictextures/: tiler.ipynb
trafficmodel/modelGUI/ui/: uiComponent.cpp  uiComponent.h  uiRegistry.cpp  uiRegistry.h
trafficmodel/modelGUI/ui/datatypes/: datatypes.h
trafficmodel/modelGUI/ui/implementations/: AbsoluteContraint.h  BaseState.h  RelativeContraint.h
trafficmodel/modelGUI/ui/interfaces/: componentConstraint.h  componentState.h  positionConstraint.h  sizeConstraint.h
trafficmodel/modelGUI/utils/: fpsTracker.cpp  fpsTracker.h  guiHelpers.cpp  guiHelpers.h  imap.h  textureConstants.h
trafficmodel/src/: main.cpp
trafficmodel/src/model/: intersection.cpp  road.cpp  vehicle.cpp
trafficmodel/src/utils/: astar.cpp  math.cpp  node.cpp  pos.cpp
